awesome microcontroller DB and beginning couch views

--- a/Week03/CouchDb04/package.json
+++ b/Week03/CouchDb04/package.json
@@ -1,12 +1,13 @@
 {
-    "name": "CouchDemo",
-    "description": "Learn about CouchDB",
-    "version": "0.0.1",
+    "name": "CouchDbViews",
+    "description": "Learn about CouchDb Views",
+    "version": "0.0.2",
     "private": true,
     "scripts": {
         "start": "nodemon server.js"
     },
     "dependencies": {
+        "inquirer": "^1.2.1",
         "nano": "^6.1.2",
         "request-debug": "^0.2.0"
     }
