--- a/Week03-ExpressRoutes/package.json
+++ b/Week03-ExpressRoutes/package.json
@@ -12,6 +12,13 @@
         "cookie-parser": "~1.0.1",
         "body-parser": "~1.0.0",
         "debug": "~0.7.4",
-        "jade": "~1.3.0"
+        "jade": "~1.3.0",
+        "grunt": "^1.0.1",
+        "grunt-contrib-clean": "~1.0.0",
+        "grunt-contrib-compress": "~1.2.0",
+        "grunt-contrib-copy": "~1.0.0",
+        "grunt-contrib-jshint": "~1.0.0",
+        "grunt-jsbeautifier": "^0.2.12",
+        "grunt-jscs": "^2.8.0"
     }
 }
