--- a/Week03-CouchDB/package.json
+++ b/Week03-CouchDB/package.json
@@ -4,7 +4,7 @@
     "version": "0.0.2",
     "private": true,
     "scripts": {
-        "start": "nodemon server.js"
+        "start": "node server.js"
     },
     "dependencies": {
         "inquirer": "^1.2.1",
