--- a/Week04-PointerLock/.jscsrc
+++ b/Week04-PointerLock/.jscsrc
@@ -4,10 +4,12 @@
     "excludeFiles": [
         "**/node_modules/**",
         "**/components/**",
-        "**/three.min.js"
+        "**/three.min.js",
+        "**/pointerLockControls.js",
+        "**/pointerLockSetup.js"
     ],
     "requireCamelCaseOrUpperCaseIdentifiers": false,
-    "maximumLineLength": 120,
+    "maximumLineLength": 200,
     "requireSpaceBeforeBinaryOperators": ["+", "-", "/", "*", "=", "==", "===", "!=", "!=="],
     "requireSpaceAfterBinaryOperators": ["+", "-", "/", "*", "=", "==", "===", "!=", "!=="],
     "requireSpaceAfterKeywords": ["if", "else", "for", "while", "do", "switch", "try", "catch"]
