updated collision with 45 slide protection! I added a downward facing tripod to the collision detection rays so that the player can't clip through boxes while falling

--- a/Week05-MazeBuilder/.jscsrc
+++ b/Week05-MazeBuilder/.jscsrc
@@ -2,7 +2,7 @@
     "preset": "google",
     "validateIndentation": 4,
     "excludeFiles": [
-        "**/node_modules/**"
+        "**/node_modules/**", "**/components/**", "**/three.min.js"
     ],
     "requireCamelCaseOrUpperCaseIdentifiers": false,
     "maximumLineLength": 200,
