--- a/Week07-DataMaster/bower.json
+++ b/Week07-DataMaster/bower.json
@@ -1,24 +1,23 @@
 {
-  "name": "elven-project",
-  "version": "0.0.0",
-  "authors": [
-    "Charlie Calvert"
-  ],
-  "description": "Angular Unit Tests",
-  "keywords": [],
-  "license": "MIT",
-  "homepage": "http://www.elvenware.com",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
-  "dependencies": {
-    "jquery": "^3.1.1",
-    "angular": "^1.5.8",
-    "angular-route": "^1.5.8",
-    "bootstrap": "^3.3.7"
-  }
+    "name": "DataMaster",
+    "description": "This is the data controller for my game",
+    "main": "",
+    "authors": [
+        "Jefferson on ist320 vbox <jefferson.eagley@gmail.com>"
+    ],
+    "license": "MIT",
+    "homepage": "",
+    "private": true,
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "test",
+        "tests"
+    ],
+    "dependencies": {
+        "jquery": "^3.1.1",
+        "requirejs": "^2.3.2",
+        "bootstrap": "^3.3.7"
+    }
 }
