--- a/Week07-DataMaster/package.json
+++ b/Week07-DataMaster/package.json
@@ -1,38 +1,27 @@
 {
-    "name": "CouchDbViews",
+    "name": "DataMaster",
     "version": "0.0.1",
-    "description": "Learning CouchViews",
     "private": true,
     "scripts": {
-        "start": "nodemon ./bin/www"
+        "start": "nodejs ./bin/www"
     },
     "dependencies": {
-        "body-parser": "~1.15.1",
-        "cookie-parser": "~1.4.3",
-        "debug": "~2.2.0",
-        "express": "~4.14.0",
-        "handlebars": "^4.0.5",
-        "jade": "~1.11.0",
-        "morgan": "~1.7.0",
-        "nano": "^6.0.2",
-        "request": "^2.49.0",
-        "serve-favicon": "~2.3.0"
+        "express": "~4.0.0",
+        "static-favicon": "~1.0.0",
+        "morgan": "~1.0.0",
+        "cookie-parser": "~1.0.1",
+        "body-parser": "~1.0.0",
+        "debug": "~0.7.4",
+        "jade": "~1.3.0",
+        "nano": "^6.0.2"
     },
     "devDependencies": {
-        "grunt": "~1.0.1",
-        "grunt-contrib-clean": "^1.0.0",
-        "grunt-contrib-jade": "^1.0.0",
-        "grunt-contrib-jshint": "^1.0.0",
-        "grunt-exec": "^1.0.1",
-        "grunt-jsbeautifier": "^0.2.10",
-        "grunt-jscs": "^3.0.1",
-        "grunt-karma": "^2.0.0",
-        "grunt-shell": "^2.0.0",
-        "jasmine-core": "^2.3.4",
-        "jshint-stylish": "^2.0.1",
-        "karma": "~1.3.0",
-        "karma-jasmine": "~1.0.2",
-        "karma-phantomjs-launcher": "^1.0.0",
-        "karma-spec-reporter": "~0.0.23"
+        "grunt": "^1.0.1",
+        "grunt-contrib-clean": "~1.0.0",
+        "grunt-contrib-compress": "~1.2.0",
+        "grunt-contrib-copy": "~1.0.0",
+        "grunt-contrib-jshint": "~1.0.0",
+        "grunt-jsbeautifier": "^0.2.12",
+        "grunt-jscs": "^2.8.0"
     }
 }
