--- a/Week07-DataMaster/bower.json
+++ b/Week07-DataMaster/bower.json
@@ -1,23 +1,24 @@
 {
-    "name": "DataMaster",
-    "description": "This is the data controller for my game",
-    "main": "",
-    "authors": [
-        "Jefferson on ist320 vbox <jefferson.eagley@gmail.com>"
-    ],
-    "license": "MIT",
-    "homepage": "",
-    "private": true,
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "test",
-        "tests"
-    ],
-    "dependencies": {
-        "jquery": "^3.1.1",
-        "requirejs": "^2.3.2",
-        "bootstrap": "^3.3.7"
-    }
+  "name": "DataMaster",
+  "description": "This is the data controller for my game",
+  "main": "",
+  "authors": [
+    "Jefferson on ist320 vbox <jefferson.eagley@gmail.com>"
+  ],
+  "license": "MIT",
+  "homepage": "",
+  "private": true,
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "jquery": "^3.1.1",
+    "requirejs": "^2.3.2",
+    "bootstrap": "^3.3.7",
+    "bootswatch": "^3.3.7"
+  }
 }
