--- a/Week09-NodeRouteBasics/.jscsrc
+++ b/Week09-NodeRouteBasics/.jscsrc
@@ -1,7 +1,7 @@
 {
     "preset": "google",
     "validateIndentation": 4,
-    "excludeFiles": ["**/node_modules/**", "**/components/**"],
+    "excludeFiles": ["**/node_modules/**", "**/spec/**", "**/components/**"],
     "requireCamelCaseOrUpperCaseIdentifiers": false,
     "maximumLineLength": 120
 }
