--- a/Week10-SessionMaster/package.json
+++ b/Week10-SessionMaster/package.json
@@ -21,8 +21,10 @@
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "session-file-store": "^0.2.2",
     "sessionstore": "^1.2.16",
+    "static-favicon": "^2.0.0-alpha",
     "uuid": "^2.0.3"
   },
   "devDependencies": {
